<resources>
    <string name="app_name">MyNotes</string>
    <string name="add_new_note">+</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="theme_settings">Настройки темы</string>
    <string name="about">О программе</string>
    <string name="settings">Настройки</string>
    <string name="choose_all">Выбрать все</string>
    <string name="share">Поделится...</string>
    <string name="edit_note">Изменить заметку</string>
    <string name="make_a_choice">Выбрать</string>
    <string name="delete">Удалить</string>
    <string name="tip_title">Название:</string>
    <string name="save">Сохранить</string>
    <string name="note_content_tip">Описание заметки:</string>
    <string name="cancel">Отменить</string>
    <string name="note_already_exist">Такая заметка уже существует</string>
    <string name="empty_title_warning_message">Введите название заметки</string>
    <string name="note_deleted_message">"Заметка \"%s\" удалена"</string>
    <string name="confirmation_title">Подтвердите действие:</string>
    <string name="delete_cofirmation_message">Отменить удаление невозможно.\nПродолжить?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="ok">Ok</string>
    <string name="creators">Разработчики:</string>
    <string name="version">Версия:</string>
</resources>